@@ -2475,6 +2475,8 @@ Christoph Haubrich <christoph1.haubrich@arcor.de>
  for adding a workaround in detecting frame height for channels with wrong crop parameters
  for reporting duplicate component entries in the info of an ongoing recording
  for reporting a problem where the info file of an ongoing recording was not re-read
+ for reporting that some channels change their video PID in the middle of a broadcast,
+ which needs to be taken into account when regenerating the index of a recording
 
 Pekka Mauno <pekka.mauno@iki.fi>
  for fixing cSchedule::GetFollowingEvent() in case there is currently no present
